# rust_scripts

./: .gitignore
client/: Cargo.toml
client/src/: main.rs
copy_dll/: Cargo.toml
copy_dll/src/: main.rs
package/: Cargo.toml
package/src/: main.rs
socket/: Cargo.toml
socket/src/: main.rs
validation/: Cargo.toml  create_html.py  mail.py  sample.ini  send.py
validation/src/: main.rs
