[package]
name = "validation"
version = "0.1.0"
authors = ["T9SAU2"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking","json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = {version = "1.0.52", features = ["alloc"]}
log4rs = "0.12.0"
log = "0.4.8"
rust-ini = "0.15"